implement configurable route disabling on the backend, and clean up static routing on the frontend

--- a/devops/nginx-static-loadbalance.conf
+++ b/devops/nginx-static-loadbalance.conf
@@ -3,7 +3,7 @@ upstream extension_server { server localhost:8888; }
 upstream dashboard_server { server localhost:8889; }
 
 map $arg_source $upstream_server {
-    default extension_server;   # default if no match or query param is absent
+    default dashboard_server;   # default if no match or query param is absent
     "extension" extension_server;
     "dashboard" dashboard_server;
 }
