--- a/modules/lo_template_module/{{ cookiecutter.project_slug }}/setup.cfg
+++ b/modules/lo_template_module/{{ cookiecutter.project_slug }}/setup.cfg
@@ -1,9 +1,13 @@
 [metadata]
 name = {{ cookiecutter.project_name }}
+version = file:VERSION
 description = Use this as a base template for creating new modules on the Learning Observer.
 
 [options]
 packages = {{ cookiecutter.project_slug }}
+
+[options.package_data]
+{{ cookiecutter.project_slug }} = assets/*
 
 [options.entry_points]
 lo_modules =
