Added version related stuff to writing oberserver

--- a/modules/writing_observer/setup.cfg
+++ b/modules/writing_observer/setup.cfg
@@ -4,7 +4,7 @@ description = Writing Observer, a tool for monitoring student writing processes
 url = http://www.ets.org
 author_email = pmitros@ets.org
 author = Piotr Mitros
-version = 0.1
+version = file:VERSION
 
 [options]
 packages = writing_observer
