updated messages to include project name

--- a/modules/lo_template_module/{{ cookiecutter.project_slug }}/.bumpversion.toml
+++ b/modules/lo_template_module/{{ cookiecutter.project_slug }}/.bumpversion.toml
@@ -10,10 +10,10 @@ ignore_missing_files = false
 tag = false
 sign_tags = false
 tag_name = "v{new_version}"
-tag_message = "Bump version: {current_version} → {new_version}"
+tag_message = "Bump {{ cookiecutter.project_name }} version: {current_version} → {new_version}"
 allow_dirty = false
 commit = false
-message = "Bump version: {current_version} → {new_version}"
+message = "Bump {{ cookiecutter.project_name }} version: {current_version} → {new_version}"
 commit_args = ""
 setup_hooks = []
 pre_commit_hooks = []
