--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,40 +5,31 @@ on: [push]
 jobs:
   lint-python:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10"]
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pycodestyle
-    - name: Analysing the code with pycodestyle
-      run: |
-        pycodestyle --ignore=E501,W503 $(git ls-files 'learning_observer/*.py' 'modules/*.py')
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install Make
+        run: sudo apt-get install make
+
+      - name: Lint files
+        run: make linting-python
   lint-node:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/checkout@v3
+      - name: Set up Node
+        uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
-      - name: Install dependencies
-        run: |
-          npm install
+          node-version: '22.x'
 
-      - name: List unused CSS
-        run: npm run find-unused-css
+      - name: Install Make
+        run: sudo apt-get install make
 
-      - name: Lint CSS
-        run: npm run lint:css
-
-      - name: Lint JS
-        run: npm run lint:js
+      - name: Lint files
+        run: make linting-node
