debugging change_files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Check if package has changes
         id: package_check
         run: |
+          echo "$(cat changed_files.txt)"
           if grep -qE "^${{ matrix.package }}/" changed_files.txt; then
             echo "run_tests=true" >> $GITHUB_ENV
           else
