cleaned up installation

--- a/modules/writing_observer/setup.cfg
+++ b/modules/writing_observer/setup.cfg
@@ -8,6 +8,11 @@ version = file:VERSION
 
 [options]
 packages = writing_observer
+install_requires =
+   AWE_SpellCorrect @ git+https://github.com/ETS-Next-Gen/AWE_SpellCorrect.git
+   AWE_Components @ git+https://github.com/ETS-Next-Gen/AWE_Components.git
+   AWE_Lexica @ git+https://github.com/ETS-Next-Gen/AWE_Lexica.git
+   AWE_LanguageTool @ git+https://github.com/ETS-Next-Gen/AWE_LanguageTool.git
 
 [options.entry_points]
 lo_modules =
