--- a/modules/writing_observer/setup.cfg
+++ b/modules/writing_observer/setup.cfg
@@ -13,6 +13,7 @@ install_requires =
    AWE_Components @ git+https://github.com/ETS-Next-Gen/AWE_Components.git
    AWE_Lexica @ git+https://github.com/ETS-Next-Gen/AWE_Lexica.git
    AWE_LanguageTool @ git+https://github.com/ETS-Next-Gen/AWE_LanguageTool.git
+   wikipedia
 
 [options.entry_points]
 lo_modules =
