--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,29 @@
-aiodns
 aiofiles
 aiohttp
 aiohttp_cors
 aiohttp_session
 aiohttp_wsgi
-asyncio_redis
-asyncpg
+asyncio_redis   # pubsub
+asyncpg         # used in prototypes
 cookiecutter
 cryptography
-cython
 dash
 dash_renderjson
 docopt
 dash-bootstrap-components
-dash-core-components
-dash-html-components
-dash-table
-faker
-filetype
 tsvx @ git+https://github.com/pmitros/tsvx.git@09bf7f33107f66413d929075a8b54c36ca581dae#egg=tsvx
 loremipsum @ git+https://github.com/testlabauto/loremipsum.git@b7bd71a6651207ef88993045cd755f20747f2a1e#egg=loremipsum
-google-auth
 ipython
 ipykernel
-invoke
 jsonschema
-js2py
-lxml
-multiprocess
-myst_parser
+lxml    # pubsub
 names
 notebook
 numpy
 pandas
 pathvalidate
-pep8
 pmss
 psutil
-pyasn1
 py-bcrypt
 pycodestyle
 pylint
@@ -45,12 +31,9 @@ pytest
 pyyaml
 recordclass
 redis
-scipy
-slixmpp
-sphinx
+slixmpp     # pubsub
 svgwrite
 uvloop
 watchdog
-wikipedia
 
 gitserve @ git+https://github.com/ETS-Next-Gen/writing_observer.git#subdirectory=gitserve
