toy sba module cleanup

--- a/modules/lo_toy_sba/setup.cfg
+++ b/modules/lo_toy_sba/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = Toy-SBA Module
-description = Use this as a base template for creating new modules on the Learning Observer.
+description = Module for serving the Toy SBA work.
 
 [options]
 packages = lo_toy_sba
