Save state in LO Event (#209)
* code compiling for deployment of toy-sba

* state sync implemented, state load backed out

* persist redux store in local storage

* removed unused npm packages

* added draft of server side blob storage

* blob loading functionality passed to Brad

* updated lo event to allow for fetching/retrieving state

* change to handleLoadState to return IS_LOADED in state

* added lo_toy_sba module

* change to how state is returned in redux logger

* changing reset logic

* handle save_setting event in redux logger

* code cleanup

* toy sba module cleanup

* small styling changes

* debug logic for save state added

* save_blob fix

* cleaned up console statements and linted reduxlogger

---------

Co-authored-by: Paul Brost <pbrost@ets.org>

--- a/modules/lo_event/package.json
+++ b/modules/lo_event/package.json
@@ -26,6 +26,7 @@
   "type": "module",
   "dependencies": {
     "aws-sdk": "^2.1614.0",
+    "debounce": "^2.2.0",
     "http-server": "^14.1.1",
     "indexeddb-js": "^0.0.14",
     "jasmine": "^5.1.0",
@@ -33,6 +34,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "redux": "^5.0.1",
+    "redux-state-sync": "^3.1.4",
     "redux-thunk": "^3.1.0",
     "sqlite3": "^5.1.6",
     "uuid": "^10.0.0",
