added ability to add placeholders and also upload to populate placeholder text

--- a/modules/wo_bulk_essay_analysis/setup.cfg
+++ b/modules/wo_bulk_essay_analysis/setup.cfg
@@ -2,11 +2,14 @@
 name = Writing Observer Automated Essay Feedback
 description = Dashboard for interfacing a classroom of essays with automated feedback
 url = https://github.com/ETS-Next-Gen/writing_observer
-version = 0.1
+version = file:VERSION
 
 [options]
 packages = find:
 include_package_data = true
+
+[options.package_data]
+wo_bulk_essay_analysis = assets/*
 
 [options.entry_points]
 lo_modules =
