fixed module names

--- a/modules/wo_bulk_essay_analysis/setup.cfg
+++ b/modules/wo_bulk_essay_analysis/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = Writing Observer Automated Essay Feedback
+name = WO Bulk Essay Analysis
 description = Dashboard for interfacing a classroom of essays with automated feedback
 url = https://github.com/ETS-Next-Gen/writing_observer
 version = file:VERSION
