--- a/modules/wo_classroom_text_highlighter/setup.cfg
+++ b/modules/wo_classroom_text_highlighter/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = Writing Observer Classroom Text Highlighter
+name = WO Classroom Text Highlighter
 version = file:VERSION
 description = Use this as a base template for creating new modules on the Learning Observer.
 
