--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ loremipsum @ git+https://github.com/testlabauto/loremipsum.git@b7bd71a6651207ef8
 ipython
 ipykernel
 jsonschema
+pyjwt
 lxml    # pubsub
 names
 notebook
