updated extension to only connect when relevant tabs are present

--- a/extension/writing-process/src/manifest.json
+++ b/extension/writing-process/src/manifest.json
@@ -17,7 +17,8 @@
         "storage",
         "nativeMessaging",
         "scripting",
-        "activeTab"
+        "activeTab",
+        "tabs"
     ],
     "icons": {
 	    "48": "assets/lousy-fountain-pen-48.png"
