updated setup description

--- a/modules/lo_blocks_module/setup.cfg
+++ b/modules/lo_blocks_module/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = LO Blocks module
 version = file:VERSION
-description = Use this as a base template for creating new modules on the Learning Observer.
+description = This is a generic module for understanding how write and read from reducers for the LO Blocks framework.
 
 [options]
 packages = lo_blocks_module
